# expenses

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
expenses/: app.py  metrics.py  models.py  ops.py  plots.py  sidebar.py  statements.py
