[tool.poetry]
name = "expenses"
version = "0.1.0"
description = ""
authors = ["ab3llini <albertomario.bellini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.23.1"
pandas = "^2.0.2"
plotly = "^5.15.0"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
